flex items alignment css fix, card page new card design added

--- a/src/app/layout/feature/componants/card/card.component.scss
+++ b/src/app/layout/feature/componants/card/card.component.scss
@@ -22,3 +22,16 @@ h1,h2,h3,h4,h5{
     margin-top:16px;
     margin-bottom:16px;
 }
+
+.card-block{
+    max-height: 400px;
+    max-width: 100%;
+}
+
+.card-block-icon{
+    font-size: 50px;
+    font-family: 400;
+    width:100%;
+    height:100%;
+    color: rgba(80, 38, 171, 0.8);
+}
